Fix staging deployment to pull from staging-dev branch

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -24,7 +24,7 @@ jobs:
             
             echo "📦 Pulling latest code..."
             git fetch origin
-            git reset --hard origin/main
+            git reset --hard origin/staging-dev
             
             echo "🔑 Copying environment file..."
             cp /home/ubuntu/ar-ui/.env .env
